--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
